# Softwareentwicklung-2022

./: .clang-format  CMakeLists.txt  README.md  main.cpp
doc/: Materials.plantuml  Raytracing-Activity.plantuml  Raytracing.plantuml  setup-instructions.md
src/: CMakeLists.txt  Hittable.h  Hittables.cpp  Hittables.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
test/: CMakeLists.txt  Vec3Tests.cpp
